trunk/Archive2/d7/4e3d391fc2f13e/output
+ clang++ -std=c++11 -pedantic main.cpp
main.cpp:11:19: error: non-const reference cannot bind to bit-field 'field'
  struct{}_ = foo(dummy.field);
                  ^~~~~~~~~~~
main.cpp:2:12: note: bit-field is declared here
  unsigned field:1;
           ^
1 error generated.
